prevent footer from getting too high

--- a/public/css/style.bundle.css
+++ b/public/css/style.bundle.css
@@ -15545,7 +15545,7 @@ html {
 
 html,
 body {
-  height: 100%;
+  min-height: 100%;
   margin: 0px;
   padding: 0px;
   font-size: 13px;
